# brave-shields-extension

./: .gitignore  README.md  manifest.json  package-lock.json  package.json  tsconfig.json  webpack.config.js
src/background/: cosmetic-injector.ts  dnr-manager.ts  engine.ts  service-worker.ts  site-modes.ts  storage.ts
src/content/: cosmetic-observer.ts  messaging.ts  twitch-ad-blocker.ts  youtube-ad-blocker.ts
src/popup/: popup.css  popup.html  popup.ts
src/shared/: constants.ts  filter-lists.ts  types.ts
wasm/: Cargo.toml  build.sh
wasm/src/: lib.rs
