[package]
name = "adblock-engine"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
adblock = { version = "0.12", features = ["css-validation"] }
wasm-bindgen = "0.2"
serde-wasm-bindgen = "0.6"
serde_json = "1.0"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["console"] }

[profile.release]
opt-level = "s"
lto = true
